Bug 514238 - [Android] Overview docker does not work with touch drags
Summary: [Android] Overview docker does not work with touch drags
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 5.2.14
Platform: Android Android 14.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2026-01-06 19:15 UTC by Door1
Modified: 2026-01-16 14:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Door1 2026-01-06 19:15:25 UTC
SUMMARY
[Android] Overview docker does not work with touch drags

STEPS TO REPRODUCE
1. Start a drawing, and open the Overview docker
2. With your finger on the screen, attempt to drag the little canvas in the Overview docker to pan the canvas view

OBSERVED RESULT
Nothing happens.

EXPECTED RESULT
The canvas view pans, just like it would happen when dragging with a mouse.

SOFTWARE/OS VERSIONS
Krita 5.2.14
Android 14
arm64
Comment 1 Bug Janitor Service 2026-01-06 23:31:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2589
Comment 2 Dmitry Kazakov 2026-01-07 08:50:27 UTC
Git commit 814223f14e52d25e3287a17cf4780fedbb50d5bd by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 07/01/2026 at 08:50.
Pushed by dkazakov into branch 'master'.

Disable context menu on overview widget

To prevent long-press handling from blocking the drag.

M  +3    -0    plugins/dockers/overview/overviewwidget.cc

https://invent.kde.org/graphics/krita/-/commit/814223f14e52d25e3287a17cf4780fedbb50d5bd
Comment 3 Dmitry Kazakov 2026-01-16 14:31:07 UTC
Git commit 84b2148dd0bd43b78423ca4ee82e3837eb6e6bf8 by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 16/01/2026 at 14:30.
Pushed by dkazakov into branch 'krita/5.2'.

Disable context menu on overview widget

To prevent long-press handling from blocking the drag.

M  +3    -0    plugins/dockers/overview/overviewwidget.cc

https://invent.kde.org/graphics/krita/-/commit/84b2148dd0bd43b78423ca4ee82e3837eb6e6bf8