Disable context menu on overview widget

To prevent long-press handling from blocking the drag.

BUG:514238